tests/NormalTests/paczka1/fuzzy1/71396531.err
Error in line 1: TwBGI A278 81,4
Error in line 7: TwBGI A170 20,68
Error in line 8: E7HsbNL A889 8,4
Error in line 15: WxMdzNE A769 20,1
Error in line 14: E7HsbNL A278 46,0
Error in line 19: E7HsbNL A170 79,9
Error in line 3: TwBGI A170 41,5
Error in line 22: E7HsbNL A278 67,0
Error in line 25: E7HsbNL A769 44,6
Error in line 34: d5TlmP A889 C9,6
Error in line 27: E7HsbNL A278 85,0
Error in line 28: d5TlmP A170 42,5
Error in line 21: VzHq A278 76,4
